--- a/blog/2023-03-29-hello.md
+++ b/blog/2023-03-29-hello.md
@@ -7,6 +7,8 @@ tags: []
 
 Hello, world!
 
+<!-- truncate -->
+
 I will most probably end up writing something here, but in the meantime, my master's dissertation awaits...
 
 Check out the [DOXATHON 2023 playlist](https://open.spotify.com/playlist/3KdjXhtZUBunjzWpCNjPtk?si=2e65d028945247b7) while you wait for some groovy tunes. 🎶
